# plu

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  types.rs
backend/src/api/: entity_manager.rs  game.rs  grid_api.rs  mod.rs
backend/src/network/: ws.rs
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/app/components/: HexagonView.ts
frontend/src/app/network/: socket.ts
frontend/src/app/screens/: LoadScreen.ts
frontend/src/app/screens/main/: HexMapScreen.ts  MainScreen.ts
frontend/src/app/utils/: logger.ts  mathUtils.ts
frontend/types/: types.ts
