[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
future-utils = { version = "0.12.1", default-features = false }
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ts-rs = "11.1"
tokio = { version = "1.48.0", features = [ "full" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [ "env-filter"] }
log = "0.4.28"
env_logger = "0.11.8"
